# data-structures-and-algorithms-with-python

./: README.md  mypy.ini  prueba.py  pyproject.toml
algorithms/recursion/: binary_search.py  linear_recursive_sumatory.py  recursive_list_reversing.py  recursive_math_power.py
data_structures/: dynamic_array.py
recursion/: file_system.py  samples.py
