[tool.poetry]
name = "data-structures-and-algorithms-with-python"
version = "0.1.0"
description = "Modern pythonic data structures and algorithms implementations"
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
mypy = "^1.8.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

